fix footer on smaller laptop screen's

--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ input[type="submit"] {
   justify-content: center;
   width: 50%;
   margin: 10px auto;
-  padding: 20px 0;
 }
 
 .links {
@@ -120,9 +119,8 @@ input[type="submit"] {
 .footer {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  margin-top: 40px;
   align-items: center;
-  height: 22%;
   justify-content: flex-end;
 }
 
